--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,10 +10,11 @@ $font02:'Roboto', sans-serif;
 html{
   width: 100vw;
   height: 100%;
+  overflow: hidden;
 }
 body{
-  // display: flex;
-  // justify-content: flex-end;
+  display: flex;
+  justify-content: space-between;
   width: 100vw;
   height: 100%;
   position: relative;
@@ -22,7 +23,6 @@ body{
 .main01{
   width: 30%;
   height: 100%;
-  position: fixed;
 }
 .header{
   background-image: url(/images/header01.jpg);
@@ -40,35 +40,42 @@ body{
 
   .container-header{
     width: 100%;
-    border: $borderBlakc;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
   .avatar{
-    width: 15rem;
-    height: 15rem;
+    width: 17rem;
+    height: 17rem;
     border-radius: 50%;
     margin-bottom: 2rem;
   }
   
   .descriptionHeader{
     margin-right: 1.5rem;
-    font-size: 2.6rem;
+    font-size:  3rem;
     text-align: end;
     line-height: 3.7rem;
     font-family: $font01;
     color: #fff;
+    position: relative;
+    left: 2.5rem;
+    text-shadow: 0 0 2rem #000;
+    
+    span{
+      font-size:  4rem;
+
+    }
   }
 }
 
 .main02{
   width: 70%;
-  padding: 9.6rem 4.8rem 4.8rem;
+  padding: 9.6rem 3.8rem 3.8rem;
   background: linear-gradient(0deg, rgba(204,204,204,1) 0%, rgba(255,255,255,1) 100%);
-  position: absolute;
-  left: 38rem;
+  overflow-x: hidden;
+  overflow-y: visible;
 
   .one{
     border-bottom: $borderBlakc;
@@ -132,7 +139,6 @@ body{
           width: 20rem;
           font-size: 1.6rem;
           margin: 0 auto;
-          // background-color: rgb(0, 0, 0);
           border: 0.2rem solid #ccc;
           border-radius: 0.8rem;
           padding: 0.5rem 2rem;
@@ -143,14 +149,47 @@ body{
           display: block;         
         }
         .goToGitHub:hover{
-          box-shadow: 0 0 1rem #ccc;
-          font-weight: 600;
-          transition: all 0.1s;
-          background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
-          // border: 0.2rem solid #fff;
-
-        }
+            box-shadow: 0 0 1rem #ccc;
+            font-weight: 600;
+            transition: all 0.1s;
+            background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
+          }
       }
     }
+  }
+}
+
+.footer{
+  text-align: right;
+  
+  .icons-header-container{
+    display: flex;
+    justify-content: flex-end;
+    a{
+      width: 4.266rem;
+      height: 4.266rem;;
+    }
+    :hover .fill{
+      color: salmon;
+      transition: all 0.5s;
+      transform: scale(1.2, 1.2);
+    }
+  } 
+
+  .copyright, .Design{
+    font-family: $font02;
+    font-size: 1.3rem;
+  }
+  .rigth-margin{
+    margin-right: 1rem;
+  }
+  .bottom-margin{
+    margin-bottom: 1rem;
+  }
+  .color-Footer{
+    color: rgba(255, 255, 255, 0.687);
+  }
+  .fill{
+    color: rgba(255, 255, 255, 0.687);
   }
 }
