--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,20 @@
 $borderBlakc: 0.1rem solid #ccc;
 $font01:'Bebas Neue', cursive;
 $font02:'Roboto', sans-serif;
+@mixin titleSection {
+  font-size: 2.6rem;
+  font-family: $font01;
+  margin-bottom: 3.2rem;
+}
+@mixin rows {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+@mixin sections {
+  border-bottom: $borderBlakc;
+  padding: 3rem 0;
+}
 *{
   margin: 0;
   padding: 0;
@@ -93,17 +107,14 @@ body{
   }
 
   .two{
-    padding-top: 4rem;
+    @include sections();
+    
 
     .titleSectionTwo{
-      font-size: 2.6rem;
-      font-family: $font01;
-      margin-bottom: 3.2rem;
+      @include titleSection();
     }
     .row{
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
+      @include rows();
 
       .article-wrap{
         width: 37.8rem;
@@ -133,7 +144,7 @@ body{
         p:nth-child(3){
           font-size: 1.28rem;
           font-family: $font02;
-          margin: 0 0 0.8rem 0.5rem;;
+          margin: 0 0 0.8rem 0.5rem;
         }
         .goToGitHub{
           width: 20rem;
@@ -154,6 +165,39 @@ body{
             transition: all 0.1s;
             background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
           }
+      }
+    }
+  }
+  .three{
+    @include sections();
+
+    .titleSectionThree{
+      @include titleSection();
+    }
+    .containerSkill{
+      @include rows();
+
+      .containerArticle{
+        width: 37.8rem;
+        // height: 29.7rem;
+        border-radius: 1.5rem;
+        box-shadow: 0 0 1rem #ccc;
+        padding: 1.2rem;
+        background: #fff;
+        margin: 0 0 2rem 2rem;
+        display: flex;
+        align-items: center;
+
+        p{
+          width: 97%;
+          font-size: 1.6rem;
+          font-family: $font02;
+          margin: 0 0 0.8rem 0.5rem;
+          padding: 0 0.5rem 0.2rem 0;
+          font-weight: 700;
+          border-bottom: $borderBlakc;
+          padding-right: 0.5rem;
+        }
       }
     }
   }
