--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,7 @@ $borderBlakc: 0.1rem solid #ccc;
 $font01:'Bebas Neue', cursive;
 $font02:'Roboto', sans-serif;
 @mixin titleSection {
-  font-size: 2.6rem;
+  font-size: 3.6rem;
   font-family: $font01;
   margin-bottom: 3.2rem;
 }
@@ -103,6 +103,8 @@ body{
       font-size: 1.6rem;
       font-family: $font02;
       margin-bottom: 3.2rem;
+      line-height: 2.2rem;
+      text-align: justify;
     }
   }
 
@@ -126,7 +128,7 @@ body{
         margin: 0 0 2rem 2rem;
 
         .job-image{
-          border-radius: 2rem 2rem 0 0 ;
+          border-radius: 1.5rem 1.5rem 0 0 ;
           width: 100%;
           height: 22.1rem;
           margin-bottom: 0.5rem;
@@ -144,7 +146,11 @@ body{
         p:nth-child(3){
           font-size: 1.28rem;
           font-family: $font02;
-          margin: 0 0 0.8rem 0.5rem;
+          margin: 0 0.5rem 0.8rem 0.5rem;
+          text-align: justify;
+          line-height: 1.5rem;
+          color: rgb(52, 52, 52);
+        
         }
         .goToGitHub{
           width: 20rem;
