--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,17 @@
 $borderBlakc: 0.1rem solid #ccc;
 $font01:'Bebas Neue', cursive;
 $font02:'Roboto', sans-serif;
+$ipadPro: 1024px;
+$ipad: 768px;
+$desktop: 1247px;
+@mixin text-align-center-ipad(){
+  text-align: center;
+}
+@mixin max-ipad {
+  @media (max-width: $ipad){
+    justify-content: center;
+  }
+}
 @mixin titleSection {
   font-size: 3.6rem;
   font-family: $font01;
@@ -24,19 +35,37 @@ $font02:'Roboto', sans-serif;
 html{
   width: 100vw;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
+  @media (max-width: $ipad){
+    overflow-x:unset;
+    overflow-y:scroll ;
+  }
 }
 body{
   display: flex;
   justify-content: space-between;
   width: 100vw;
   height: 100%;
-  position: relative;
+  // position: relative;
+  @media (max-width: $ipad){
+    flex-direction: column;
+    justify-content: flex-start;
+    height:unset;
+  }
 
 }
 .main01{
   width: 30%;
   height: 100%;
+  @media (max-width: $ipad){
+    width: 100vw;
+  }
+  @media (min-width: $ipad) and (max-width: $ipadPro){
+    width: 45%;
+  }
+  @media (min-width: $ipadPro) and (max-width: $desktop){
+    width: 40%;
+  }
 }
 .header{
   background-image: url(/images/header01.jpg);
@@ -45,11 +74,15 @@ body{
   background-attachment: fixed;
   width: 100%;
   height: 100%;
-  border: $borderBlakc;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 9.6rem 0 0;
+  
+    @media (max-width: $ipad){
+      height: 70rem;
+      padding-top: 4rem;
+    }
 
 
   .container-header{
@@ -76,7 +109,15 @@ body{
     position: relative;
     left: 2.5rem;
     text-shadow: 0 0 2rem #000;
-    
+    @media (max-width: $ipad){
+      text-align: center;
+      margin-right: 0;
+      position: unset;
+      line-height: unset;
+    }
+    @media (min-width: $ipad) and (max-width: $ipadPro){
+      margin-right: 4rem;
+    }
     span{
       font-size:  4rem;
 
@@ -90,6 +131,15 @@ body{
   background: linear-gradient(0deg, rgba(204,204,204,1) 0%, rgba(255,255,255,1) 100%);
   overflow-x: hidden;
   overflow-y: visible;
+  @media (max-width: $ipad){
+    width: 100vw;
+    height: 100%;
+    padding: 3.8rem 1.8rem 3.8rem;
+  }
+  
+  @media (min-width: $ipadPro) and (max-width: $desktop){
+    width: 60%;
+  }
 
   .one{
     border-bottom: $borderBlakc;
@@ -98,6 +148,7 @@ body{
       font-size: 3.6rem;
       font-family: $font01;
       margin-bottom: 3.2rem;
+      @include text-align-center-ipad();
     }
     .descriptionOne{
       font-size: 1.6rem;
@@ -114,63 +165,78 @@ body{
 
     .titleSectionTwo{
       @include titleSection();
+      @include text-align-center-ipad();
     }
     .row{
       @include rows();
+      @include max-ipad();
+      
+      
+      @media (min-width: $ipadPro) and (max-width: $desktop){
+        justify-content: center;
+      }
 
       .article-wrap{
         width: 37.8rem;
-        // height: 29.7rem;
         border-radius: 1.5rem;
         box-shadow: 0 0 1rem #ccc;
         padding-bottom: 1.2rem;
         background: #fff;
         margin: 0 0 2rem 2rem;
-
-        .job-image{
-          border-radius: 1.5rem 1.5rem 0 0 ;
-          width: 100%;
-          height: 22.1rem;
-          margin-bottom: 0.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        // @media (min)
+      
+        @media (min-width: 300px) and (max-width: $ipadPro){
+          margin: 0 auto 1.8rem;
+          // width: 30rem;
         }
-        p:nth-child(2){
-          width: 97%;
-          font-size: 1.6rem;
-          font-family: $font02;
-          margin: 0 0 0.8rem 0.5rem;
-          padding: 0 0.5rem 0.2rem 0;
-          font-weight: 700;
-          border-bottom: $borderBlakc;
-          padding-right: 0.5rem;
-        }
-        p:nth-child(3){
-          font-size: 1.28rem;
-          font-family: $font02;
-          margin: 0 0.5rem 0.8rem 0.5rem;
-          text-align: justify;
-          line-height: 1.5rem;
-          color: rgb(52, 52, 52);
-        
-        }
-        .goToGitHub{
-          width: 20rem;
-          font-size: 1.6rem;
-          margin: 0 auto;
-          border: 0.2rem solid #ccc;
-          border-radius: 0.8rem;
-          padding: 0.5rem 2rem;
-          text-decoration: none;
-          text-align: center;
-          font-family: $font02;
-          color: rgb(0, 0, 0);
-          display: block;         
-        }
-        .goToGitHub:hover{
-            box-shadow: 0 0 1rem #ccc;
-            font-weight: 600;
-            transition: all 0.1s;
-            background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
+          .job-image{
+            border-radius: 1.5rem 1.5rem 0 0 ;
+            width: 100%;
+            height: 22.1rem;
+            margin-bottom: 0.5rem;
           }
+          p:nth-child(2){
+            width: 97%;
+            font-size: 1.6rem;
+            font-family: $font02;
+            margin: 0 0 0.8rem 0.5rem;
+            padding: 0 0.5rem 0.2rem 0;
+            font-weight: 700;
+            border-bottom: $borderBlakc;
+            padding-right: 0.5rem;
+          }
+          p:nth-child(3){
+            font-size: 1.28rem;
+            font-family: $font02;
+            margin: 0 0.5rem 0.8rem 0.5rem;
+            text-align: justify;
+            line-height: 1.5rem;
+            color: rgb(52, 52, 52);
+          
+          }
+          .goToGitHub{
+            width: 20rem;
+            font-size: 1.6rem;
+            margin: 0 auto;
+            border: 0.2rem solid #ccc;
+            border-radius: 0.8rem;
+            padding: 0.5rem 2rem;
+            text-decoration: none;
+            text-align: center;
+            font-family: $font02;
+            color: rgb(0, 0, 0);
+            display: block; 
+            position: relative;        
+          }
+          .goToGitHub:hover{
+              box-shadow: 0 0 1rem #ccc;
+              font-weight: 600;
+              transition: all 0.1s;
+              background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
+            }
       }
     }
   }
@@ -179,12 +245,17 @@ body{
 
     .titleSectionThree{
       @include titleSection();
+      @include text-align-center-ipad();
     }
     .containerSkill{
       @include rows();
+      @include max-ipad();
+      @media (min-width: $ipadPro) and (max-width: $desktop){
+        @include max-ipad();
+      }
 
       .containerArticle{
-        width: 37.8rem;
+        width: 37.5rem;
         // height: 29.7rem;
         border-radius: 1.5rem;
         box-shadow: 0 0 1rem #ccc;
@@ -193,6 +264,10 @@ body{
         margin: 0 0 2rem 2rem;
         display: flex;
         align-items: center;
+        @media (max-width: $ipad){
+          margin: 0 auto 1.8rem;
+        }
+        
 
         p{
           width: 97%;
@@ -215,10 +290,13 @@ body{
   .icons-header-container{
     display: flex;
     justify-content: flex-end;
-    a{
-      width: 4.266rem;
-      height: 4.266rem;;
-    }
+      @media (max-width: $ipad){
+        justify-content: center;
+      }
+      a{
+        width: 4.266rem;
+        height: 4.266rem;;
+      }
     :hover .fill{
       color: salmon;
       transition: all 0.5s;
