--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 .header {
-  background-image: url(/images/header01.jpg);
+  background-image: url(./images/header01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
