--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -68,7 +68,7 @@ body{
   }
 }
 .header{
-  background-image: url(./images/header01.jpg);
+  background-image: url(../images/header01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
