--- a/css/styles.css
+++ b/css/styles.css
@@ -208,13 +208,19 @@ body {
   line-height: 1.5rem;
   color: #343434;
 }
-.main02 .two .row .article-wrap .goToGitHub {
-  width: 20rem;
+.main02 .two .row .article-wrap .conatinet-Butttons-TrabajosRecientes {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main02 .two .row .article-wrap .conatinet-Butttons-TrabajosRecientes .goToGitHub {
+  width: 10rem;
   font-size: 1.6rem;
-  margin: 0 auto;
+  margin: 0 0.5rem;
   border: 0.2rem solid #ccc;
   border-radius: 0.8rem;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
   text-decoration: none;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -222,7 +228,7 @@ body {
   display: block;
   position: relative;
 }
-.main02 .two .row .article-wrap .goToGitHub:hover {
+.main02 .two .row .article-wrap .conatinet-Butttons-TrabajosRecientes .goToGitHub:hover {
   box-shadow: 0 0 1rem #ccc;
   font-weight: 600;
   transition: all 0.1s;
