--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -217,26 +217,33 @@ body{
             color: rgb(52, 52, 52);
           
           }
-          .goToGitHub{
-            width: 20rem;
-            font-size: 1.6rem;
-            margin: 0 auto;
-            border: 0.2rem solid #ccc;
-            border-radius: 0.8rem;
-            padding: 0.5rem 2rem;
-            text-decoration: none;
-            text-align: center;
-            font-family: $font02;
-            color: rgb(0, 0, 0);
-            display: block; 
-            position: relative;        
-          }
-          .goToGitHub:hover{
-              box-shadow: 0 0 1rem #ccc;
-              font-weight: 600;
-              transition: all 0.1s;
-              background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
+          .conatinet-Butttons-TrabajosRecientes{
+           width: 100%;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           
+            .goToGitHub{
+              width: 10rem;
+              font-size: 1.6rem;
+              margin: 0 0.5rem;
+              border: 0.2rem solid #ccc;
+              border-radius: 0.8rem;
+              padding: 0.5rem 1rem;
+              text-decoration: none;
+              text-align: center;
+              font-family: $font02;
+              color: rgb(0, 0, 0);
+              display: block; 
+              position: relative;        
             }
+            .goToGitHub:hover{
+                box-shadow: 0 0 1rem #ccc;
+                font-weight: 600;
+                transition: all 0.1s;
+                background: linear-gradient(0deg, rgba(204,204,204,1) 51%, rgba(255,255,255,1) 90%);
+              }
+          }
       }
     }
   }
