--- a/css/styles.css
+++ b/css/styles.css
@@ -323,4 +323,16 @@ body {
   color: rgba(255, 255, 255, 0.687);
 }
 
+.main02::-webkit-scrollbar {
+  width: 15px;
+  background: linear-gradient(0deg, #cccccc 0%, white 100%);
+}
+
+.main02::-webkit-scrollbar-thumb {
+  width: 5px;
+  background: #717171;
+  border-radius: 10px;
+  border: 3px solid #ccc;
+}
+
 /*# sourceMappingURL=styles.css.map */
